# SIFT_feature_detector

./: CMakeLists.txt  README.txt
main/: tracking_centroid.cpp  tracking_wrt_frame1.cpp
